@@ -12,10 +12,10 @@
 
 # Select the network interfaces to sniff the data. You can use the "any"
 # keyword to sniff on all connected interfaces.
-interfaces:
+packetbeat.interfaces:
   device: any
 
-flows:
+packetbeat.flows:
   # Set network flow timeout. Flow is killed if no packet is received before being
   # timed out.
   #timeout: 30s
@@ -24,7 +24,7 @@ flows:
   #period: 10s
 
 ############################# Protocols #######################################
-protocols:
+packetbeat.protocols:
   icmp:
     # Enable ICMPv4 and ICMPv6 monitoring. Default: false
     enabled: true
@@ -161,7 +161,7 @@ protocols:
 # Process matching is optional and can be enabled by uncommenting the following
 # lines.
 #
-#procs:
+#packetbeat.procs:
 #  enabled: false
 #  monitored:
 #    - process: mysqld
